xine-lib (1-rc1)
  * libdvdnav: fix some undetected stills (fixes "Red Dragon" RC2 scene selection)

xine-lib (1-rc0a)
  * includes ffmpeg's MPEG encode in dist tarball (fixes DXR3 support)
  * don't abort on MPEG_block stream errors

xine-lib (1-rc0)
  * improved seeking accuracy of ogg_demuxer 
  * xine broadcaster (send stream to multiple xine clients simultaneously)
    start master with 'xine --broadcast-port xxxx'
    start slaves with 'xine slave://master_address:xxxx'
  * nvtv updates and fixes
  * Nullsoft Video (.nsv) file demuxer
  * 4X Technologies (.4xm) file demuxer
  * libdvdnav: fix some situations where an unlucky user could trigger assertions
  * decoder priority handling: configuring a priority of 0 means "use default"
    users are advised to set all decoder priorities to 0 in their config files
  * dvd:<path> and dvd:<device> MRLs now work when a DVD is in the drive to
    which the raw device setting points to (libdvdcss tried to access the raw device)
  * fix dxr3 sync problems after seeking
  * fix potential playback problems for MPEG files with rare framerates
    (23.976, 59.94 and 60 fps)
  * move http proxy configuration to xine itself
  * add expand post video filter for displaying subtitles in borders
  * speex (http://www.speex.org) audio decoder support
  * dxr3: libavcodec from xine's ffmpeg plugin can now be used for MPEG reencoding
    (so reencoding is now possible without installing any additional libraries)
  * add support for seeking in real media files
  * improved support for real video codecs
  * new deinterlacer (tvtime) plugin with more algorithms, full framerate output, 
    2-3 pulldown detection, judder correction, chroma upsampling error free,
    works with all video drivers. warning: cpu intensive :)
  * some post plugins ported from mplayer: boxblur, denoise3d, eq, eq2, unsharp
  * big improvement of v4l input and associated demuxer. Including 